Update native_thread.md